--- a/projects/websites/index.html
+++ b/projects/websites/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>
-            
-        </title>
+        <title>First try.</title>
     </head>
-    <body>
-
+    <body bgcolor= "#CDB0EE" text="black">
+        <h1>Happy Birthday </h1>
+        <p>Many many happy returns of days </p>
+           
     </body>
 </html>
