added project changes

--- a/projects/websites/index.html
+++ b/projects/websites/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>First try.</title>
+        <title>First try</title>
     </head>
     <body bgcolor= "#CDB0EE" text="black">
         
         <h1><b>Happy Birthday</b></h1>
         <i><p>Many many happy returns of days </p></i>
 
-        <button >Important Dates</button>
+        <button >Important Dates</button><br><br>
+        <button style="text-align:right">Message</button><br><br>
+        <button >Photos</button><br><br>
+        <button >Fav Photos</button><br><br>
+
            
     </body>
 </html>
