--- a/HTML/Day6_image/index.html
+++ b/HTML/Day6_image/index.html
@@ -7,6 +7,6 @@
     </head>
     <body>
         <a href="https://kist.edu.np/" target="_blank" ><img src="dragon.jpg" width="500" height="500" ></a>
-
+            <p>using live </p>
     </body>
 </html>
