--- a/HTML/Day7_Table/index.html
+++ b/HTML/Day7_Table/index.html
@@ -4,10 +4,10 @@
         <title>This is table session.</title>
     </head>
     <body>
-        <p>For adding row we use </p>
+      <b>  <u><p>For adding row we use </p></u></b>
         <table border =1>
             <tr>
-                <td colspan="2">one</td>
+                <td >one</td>
                 <td>two</td>
                 <td>three</td>
             </tr>
@@ -15,20 +15,20 @@
             <tr>
                 <td>four</td>
                 <td>five</td>
-                <td colspan="2">six</td>
+                <td >six</td>
             </tr>
             <tr>
-                <td colspan="4">seven</td>
+                <td>seven</td>
             </tr>
         </table>
         <br>
         <br>
-        <p>Rowspan and Coloumnspan example:</p>
+       <b> <u><p>Rowspan and Coloumnspan example:</p></u></b>
 
-        <table border="1">
+        <table border="1" >
             <tr>
-                <td rowspan=2">S.N</td>
-                <td colspan="2">Subject</td>
+                <td rowspan="2">S.N</td>
+                <td colspan="2" style="text-align:right;">Subject</td>
             </tr>
             <tr>
                 <td>theory</td>
@@ -36,7 +36,27 @@
             </tr>
 
         </table>
-    
+        <br>
+        <br>
+
+        <b><u><p>This is table thread.</p></u></b>
+    <table border="1" align="left">
+       <thead>
+        <th>table1</th>
+        <th>table2</th>
+        <th>table3</th>
+       </thead>
+       <tr>
+            <td>one</td>
+            <td>two</td>
+            <td>three</td>
+       </tr>
+       <tr>
+        <td>four</td>
+        <td>five</td>
+        <td>six</td>
+   </tr>
+    </table>
 
 
     </body>
