file managed as html css and js

--- a/HTML/Day7_Table/index.html
+++ b/HTML/Day7_Table/index.html
@@ -42,9 +42,9 @@
         <b><u><p>This is table thread.</p></u></b>
     <table border="1" align="left">
        <thead>
-        <th>table1</th>
-        <th>table2</th>
-        <th>table3</th>
+        <th>Table1</th>
+        <th>Table2</th>
+        <th>Table3</th>
        </thead>
        <tr>
             <td>one</td>
