--- a/HTML/Day8_Form/index.html
+++ b/HTML/Day8_Form/index.html
@@ -4,6 +4,14 @@
         <title>Forms</title>
     </head>
     <body>
+        <form>
+            <label>Name: &nbsp&nbsp&nbsp&nbsp&nbsp</label><input type="text"><br><br>
+            <label>Password:&nbsp</label><input type="text"><br><br>
+            <label>Phone No:&nbsp</label><input type="number"><br><br>
+            <label>Gender:</label><input type="checkbox"><label>Male</label>&nbsp;<input type="checkbox"><label>Female</label>
+
+
+        </form>
 
     </body>
 </html>
