--- a/HTML/Day8_Form/index.html
+++ b/HTML/Day8_Form/index.html
@@ -8,7 +8,20 @@
             <label>Name: &nbsp&nbsp&nbsp&nbsp&nbsp</label><input type="text"><br><br>
             <label>Password:&nbsp</label><input type="text"><br><br>
             <label>Phone No:&nbsp</label><input type="number"><br><br>
-            <label>Gender:</label><input type="checkbox"><label>Male</label>&nbsp;<input type="checkbox"><label>Female</label>
+            <label>Gender:</label>
+                    <input type="radio" name="gender">
+                    <label>Male</label>&nbsp;
+                    <input type="radio"  name="gender">
+                    <label>Female</label><br><br>
+
+            <label>Country:</label>
+            <select name="Country" id="Country">
+                <option value="Nepal">Nepal</option>
+                <option value="India">India</option>
+                <option value="Pakistan">Pakistan</option>
+                <option value="Bhutan">Bhutan</option></select><br><br>
+            
+            <label>Gmail:</label><input type="email">
 
 
         </form>
