--- a/HTML/Apna_College/hello.html
+++ b/HTML/Apna_College/hello.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Introduction to HTML</title>
-    
-    
+    <title>Print Hello</title>
 </head>
 <body>
-    <h1>Welcome to my website</h1>
-    <img src="tiger.jpg" div = "center" width = 100 length = 100>
-
+    <h1>Hello !</h1>
 </body>
 </html>
