--- a/HTML/Day2_Introduction/class1.html
+++ b/HTML/Day2_Introduction/class1.html
@@ -1,6 +1,9 @@
 <!DoCTYPE html>
-<html>
+<htm lang="en">
     <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>This is the first class. </title>
     </head>
     <body bgcolor="PURPLE" text ="pink">
