--- a/HTML/Day5_URL/inde.html
+++ b/HTML/Day5_URL/inde.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html><html>
-    <head>
+    <head lang="en">
+        <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>
                 This is URL topic.
         </title>
