protfolio folder addded and apna college level 2 done

--- a/HTML/Apna_College/index.html
+++ b/HTML/Apna_College/index.html
@@ -15,11 +15,11 @@
     <h4>heading 4</h4>
     <h5>heading 1</h5>
     <h6>heading 1</h6>
-
+    <hr>
     <u><b> paragrah</b></u>
     <p>sample paragraphsample paragraphsample paragraphsample paragraphsample paragraphsample paragraphsample paragraphsample paragraphsample paragraphsample paragraphsample paragraphsample paragraphsample paragraphsample paragraph</p>
 
-
+    <hr>
     <u><b>Anchor Tags</b></u>
     <br><br>
 
@@ -31,11 +31,54 @@
 
     <a href="hello.html" target="_blank">Next!</a>
     <br><br>
-
+    <hr>
     <u><b>Image Tags</b></u>
     <br><br>
 
     <img src="tommy.jpg" alt="Thomas Shelby" height="200" width="200">
+
+    <br>
+    <br>
+    <hr>
+    <u><b>Br Tag</b></u>
+    <p>It helps to break line..</p>
+    <br>
+    <br>
+    <hr>
+
+    <u><b>U Tags</b></u><br>
+    <p>It helps to <u>underline..</u></p>
+    <br>
+    <br>
+    <hr>
+
+    <u><b>I Tags</b></u><br>
+    <p>It helps to <i>itallic..</i></p>
     
+    <u><b>B Tags</b></u><br>
+    <p>It helps to <b>Bold..</b></p>
+    <hr>
+
+    <u><b>Big Tags & Small Tags</b></u><br>
+    <big>this is big tags..</big>
+
+    <small>this is small tags..</small>
+    <br>
+    <br>
+    <br>
+    <hr>
+    <u><b>Hr Tags</b></u><br>
+    <p>This tag create horizontal scale..</p>
+    <hr>
+
+    <u><b>Subscript & Superscript Tags</b></u><br>
+    <p>H<sub>2</sub>O = Water (Subscript)</p>
+    <p>3<sup>2</sup> = 9 (Superscript)</p>
+    <hr>
+    
+    <u><b>Pre Tags</b></u><br>
+    <p>This tag helps to make print as you type</p>
+    <pre> For eg:-  Lorem                psum dolor, repellat dolore beatae.</pre>
+
 </body>
 </html>
