--- a/HTML/Day9_Audio&Video/index.html
+++ b/HTML/Day9_Audio&Video/index.html
@@ -8,10 +8,12 @@
     </title>
 </head>
 <body>
-    <p>Audio</p>
+    <u><h1><p>Audio</p></h1></body></u>
+    <p>This tag helps to add audio.</p>
     <audio ></audio>
-
-    <p>Video</p>
+    <hr>
+    <u><h1><p>Video</p></h1></u>
+    <p>This tag helps to add video</p>
     <video controls><source src="https://youtu.be/hQq0GEvkZ3k"> </video>
     <br>
     <br>
