--- a/HTML/Day9_Audio&Video/index.html
+++ b/HTML/Day9_Audio&Video/index.html
@@ -10,7 +10,9 @@
 <body>
     <u><h1><p>Audio</p></h1></body></u>
     <p>This tag helps to add audio.</p>
-    <audio ></audio>
+    <audio controls>
+        <source src="">
+    </audio>
     <hr>
     <u><h1><p>Video</p></h1></u>
     <p>This tag helps to add video</p>
