--- a/HTML/Protfolio/projects.html
+++ b/HTML/Protfolio/projects.html
@@ -7,6 +7,8 @@
     <title>Projects</title>
 </head>
 <body>
-    <P>This is my projects</P>
+    <P>You can see my projects.</P>
+
+    <a href=""
 </body>
 </html>
