--- a/CSS/Day2_Font/index.html
+++ b/CSS/Day2_Font/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <link ref="stylesheet" href="style.css">
+    <title>Font</title>
 </head>
 <body>
-    <h1>About:</h1>
-    <P></P>
+    <p>This is written in Time New Roman</p>
     
 </body>
 </html>
