added font course

--- a/CSS/Day2_Font/index.html
+++ b/CSS/Day2_Font/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link ref="stylesheet" href="style.css">
     <title>Font</title>
+<link rel="stylesheet" href="style.css">   
 </head>
 <body>
-    <p>This is written in Time New Roman</p>
+    <p>This is written in Time New Roman.</p>
     
 </body>
 </html>
