added font course of css

--- a/CSS/Day2_Font/index.html
+++ b/CSS/Day2_Font/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="style.css">   
 </head>
 <body>
-    <p>This is written in Time New Roman.</p>
+    <p>This is written in <img src="tommy.jpg" width="50" height="50">Time New Roman.</p>
     
 </body>
 </html>
