added font and image align

--- a/CSS/Day2_Font/index.html
+++ b/CSS/Day2_Font/index.html
@@ -5,7 +5,8 @@
 <link rel="stylesheet" href="style.css">   
 </head>
 <body>
-    <p>This is written in <img src="tommy.jpg" width="50" height="50">Time New Roman.</p>
+    <p>This is written in <img src="tommy.jpg" width="50" height="50">Font in CSS.</p>
+    <p>This is written in <img src="tommy.jpg" width="30" height="30">ASDFADSFASF.</p>
     
 </body>
 </html>
