added class files

--- a/CSS/Day3_Class_ID/index.html
+++ b/CSS/Day3_Class_ID/index.html
@@ -6,8 +6,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <b><u><p>Id using to call tow different paragraph</p></u></b>
     <P id="f">THIS IS FIRST PARA</P>
     <P id="s">THIS IS SECOND PARA</P>
+
+    <br>
+    <b><u><p>class using to call two different paragraph</p></u></b>
+    <P class="f">THIS IS FIRST PARA</P>
+    <P class="s">THIS IS SECOND PARA</P>
     
 </body>
 </html>
