--- a/CSS/Day3_Class_ID/index.html
+++ b/CSS/Day3_Class_ID/index.html
@@ -35,7 +35,7 @@
 
    </ul>
 
-
+<!-- Adjecent selction  using to call two different paragraph -->
    <b><u><p>Adjecent selction  using to call two different paragraph</p></u></b>
    <ul>
         <li>
@@ -45,6 +45,22 @@
         </li>    
 
    </ul>
+   <!-- Universal selction  using to call two different paragraph -->
+   <b><u><p>Universal selction  using to call two different paragraph</p></u></b>
+   <ul>
+        <li>
+            <h1>Universal Section</h1>
+             <P>THIS IS FIRST PARA</P>
+             <P>THIS IS SECOND PARA</P>
+        </li>    
+
+   </ul>
+
+   
+
+   <h1>Type Section</h1>
+   <P>THIS IS FIRST PARA</P>
+   <h2>THIS IS SECOND PARA</P>
     
 </body>
 </html>
