--- a/HTML/projects/Solar/index.html
+++ b/HTML/projects/Solar/index.html
@@ -2,26 +2,8 @@
 <html lang="en">
 
     <head>
-        <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <style>
-            body{
-                margin: 0;
-                height: 100vh;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                background-color: black;
-                overflow: hidden;
-            }
-@keyframes orbit{
-                to{
-                    transform: rotate(360 deg);
-                }
-            }
-
-        </style>
+        <title>Solar System</title>
+        <link ref="stylesheet" href="style.css">
     </head>
     <body>
         <div class="container">
