--- a/CSS/Day4_Table/index.html
+++ b/CSS/Day4_Table/index.html
@@ -6,7 +6,9 @@
    <link rel="stylesheet" href="box.css">
 </head>
 <body>
-    <div class="box"> Box1</div>
+    <div class="box">
+        <p>this is para</p>
+    </div>
     
 </body>
 </html>
