added division tag

--- a/CSS/Day4_Table/index.html
+++ b/CSS/Day4_Table/index.html
@@ -9,6 +9,9 @@
     <div class="box">
         <p>this is para</p>
     </div>
+    <div class="box1">
+        <p>this is para2</p>
+    </div>
     
 </body>
 </html>
