--- a/CSS/Day4_Table/index.html
+++ b/CSS/Day4_Table/index.html
@@ -10,7 +10,8 @@
         <p>this is para</p>
     </div>
     <div class="box1">
-        <p>this is para2</p>
+        <h1><p>this is para2</p></h1>
+        <p style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil fuga enim, mollitia, commodi molestiae accusamus omnis illo, distinctio dolor impedit dolorem. Excepturi sit temporibus reprehenderit nemo. Harum unde suscipit quisquam! </p>
     </div>
     
 </body>
