--- a/CSS/Day4_Table/index.html
+++ b/CSS/Day4_Table/index.html
@@ -14,7 +14,7 @@
     </div>
 
     <!-- box1 -->
-    <div class="box1">
+    <div class="box">
         <h1><p>this is para2</p></h1>
         <p style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil fuga enim, mollitia, commodi molestiae accusamus omnis illo, distinctio dolor impedit dolorem. Excepturi sit temporibus reprehenderit nemo. Harum unde suscipit quisquam! </p>
     </div>
@@ -27,7 +27,7 @@
 </div>
 
 <!-- box3 -->
-<div class="box1">
+<div class="box">
     <h1><p>this is para4</p></h1>
     <p style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil fuga enim, mollitia, commodi molestiae accusamus omnis illo, distinctio dolor impedit dolorem. Excepturi sit temporibus reprehenderit nemo. Harum unde suscipit quisquam! </p>
 </div>
