--- a/CSS/Day5_Links/index.html
+++ b/CSS/Day5_Links/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Links</title>
+    
 
 </head>
 <body>
+    <a href="https://kist.edu.np/">KIST College</a>
     
 </body>
 </html>
