--- a/PROJECTS/SliderUsingCss/index.html
+++ b/PROJECTS/SliderUsingCss/index.html
@@ -3,18 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>ImageSlider</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Slider Using Css</h1>
     <div class="container">
-        <div class="slide-container">
+        <div class="slide_container">
 
-          <div class="slide-image">
-            <img src="tommy.jpg" alt="1stphoto" height="700px" width="800px">
+          <div class="slide_image">
+            <img src="tommy.jpg" >
           </div> 
           <div class="slide-image">
-            <img src="ganesh.jpg" alt="2ndtphoto" height="700px" width="800px">
+            <img src="ganesh.jpg" >
           </div>
 
         </div>
