html course and css done

--- a/JAVA_SCRIPT/Day04_Function/index.html
+++ b/JAVA_SCRIPT/Day04_Function/index.html
@@ -5,8 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Function</title>
     <script src="function.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <p>This function session.</p>
+
+    <label>First number </label><input type="text" id="first">
+    <label>Second number</label><input type="text" id="second">
+    <input type="button" value="ADD">
+    <input type="text">
+
     
 </body>
 </html>
