--- a/JAVA_SCRIPT/Day04_Function/index.html
+++ b/JAVA_SCRIPT/Day04_Function/index.html
@@ -10,10 +10,10 @@
 <body>
     <p>This function session.</p>
 
-    <label>First number </label><input type="text" id="first">
-    <label>Second number</label><input type="text" id="second">
-    <input type="button" value="ADD">
-    <input type="text">
+    <label>First number: </label><input type="text" id="first">
+    <label>Second number: </label><input type="text" id="second">
+    <input type="button" value="ADD" class="add">
+    <label>Result: </label><input type="text" id="result" readonly>
 
     
 </body>
