--- a/JAVA_SCRIPT/Day04_Function/index.html
+++ b/JAVA_SCRIPT/Day04_Function/index.html
@@ -12,7 +12,7 @@
 
     <label>First number: </label><input type="text" id="first">
     <label>Second number: </label><input type="text" id="second">
-    <input type="button" value="ADD" class="add">
+    <input type="button" value="ADD" class="add" onclick="addition()">
     <label>Result: </label><input type="text" id="result" readonly>
 
     
