added addition code

--- a/JAVA_SCRIPT/Day04_Function/index.html
+++ b/JAVA_SCRIPT/Day04_Function/index.html
@@ -10,11 +10,16 @@
 <body>
     <p>This function session.</p>
 
-    <label>First number: </label><input type="text" id="first">
-    <label>Second number: </label><input type="text" id="second">
-    <input type="button" value="ADD" class="add" onclick="addition()">
-    <label>Result: </label><input type="text" id="result" readonly>
+    <br>
+    <br>
+    <p class="cal">Calculator</p>
+    <p class="add">Addition Code</p>
 
-    
+    <label>First number: </label><input type="text" id="first"><br><br>
+    <label>Second number: </label><input type="text" id="second"><br><br>
+    <input type="button" value="ADD" class="sum" onclick="addition()"><br><br>
+    <label>Result: </label><input type="text" id="result" readonly><br><br>
+
+    <p id="para"></p>
 </body>
 </html>
