--- a/JAVA_SCRIPT/Day04_Function/index.html
+++ b/JAVA_SCRIPT/Day04_Function/index.html
@@ -13,13 +13,23 @@
     <br>
     <br>
     <p class="cal">Calculator</p>
-    <p class="add">Addition Code</p>
+    <p class="math">Addition Code</p>
 
     <label>First number: </label><input type="text" id="first"><br><br>
     <label>Second number: </label><input type="text" id="second"><br><br>
     <input type="button" value="ADD" class="sum" onclick="addition()"><br><br>
     <label>Result: </label><input type="text" id="result" readonly><br><br>
 
-    <p id="para"></p>
+    <!-- <p id="para"></p> -->
+
+
+    <p class="math">Subtraction Code</p>
+
+    <label>First number: </label><input type="text" id="first"><br><br>
+    <label>Second number: </label><input type="text" id="second"><br><br>
+    <input type="button" value="SUB" class="sum" onclick="subtraction()"><br><br>
+    <label>Result: </label><input type="text" id="sub" readonly><br><br>
+
+    <!-- <p id="para"></p> -->
 </body>
 </html>
