added calcultor code

--- a/JAVA_SCRIPT/Day04_Function/index.html
+++ b/JAVA_SCRIPT/Day04_Function/index.html
@@ -8,15 +8,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <B><U><p>This function session.</p></U></B>
+    <h1>This is Function Session</h1>
 
     <br>
     <br>
     <p class="cal">Calculator</p>
-    <p class="math">Addition Code</p>
 
+
+    <p>Enter any two numbers.</p>
     <label class="first">First number: </label><input type="text" id="first"><br><br>
     <label class="second">Second number: </label><input type="text" id="second"><br><br>
+
+    
+    <p class="math">Addition Code</p>
     <input type="button" value="ADDITION" class="button" onclick="addition()"><br><br>
     <label>Result: </label><input type="text" id="add" readonly><br><br>
 
@@ -36,7 +40,7 @@
 
     <p class="math">Multiplication Code</p>
 
-    <input type="button" value="Multiplication" class="button" onclick="multipliation()"><br><br>
+    <input type="button" value="Multiplication" class="button" onclick="multiplication()"><br><br>
     <label>Result: </label><input type="text" id="mul" readonly><br><br>
 </body>
 </html>
