calculator code being updaed

--- a/JAVA_SCRIPT/Day04_Function/index.html
+++ b/JAVA_SCRIPT/Day04_Function/index.html
@@ -9,38 +9,35 @@
 </head>
 <body>
     <h1>This is Function Session</h1>
-
     <br>
     <br>
-    <p class="cal">Calculator</p>
 
+    <h2> <p class="cal">Calculator</p></h2>
 
     <p>Enter any two numbers.</p>
     <label class="first">First number: </label><input type="text" id="first"><br><br>
     <label class="second">Second number: </label><input type="text" id="second"><br><br>
 
-    
+<!--Addition Code  -->    
     <p class="math">Addition Code</p>
     <input type="button" value="ADDITION" class="button" onclick="addition()"><br><br>
-    <label>Result: </label><input type="text" id="add" readonly><br><br>
+    <label class="math">Result: </label><input type="text" id="add" readonly><br><br>
 
     <!-- <p id="para"></p> -->
 
-
+<!--Subtraction Code  -->
     <p class="math">Subtraction Code</p>
-
     <input type="button" value="SUBTRACTION" class="button" onclick="subtraction()"><br><br>
-    <label>Result: </label><input type="text" id="sub" readonly><br><br>
+    <label class="math">Result: </label><input type="text" id="sub" readonly><br><br>
 
+<!--Division Code  -->
     <p class="math">Division Code</p>
-
     <input type="button" value="DIVISION" class="button" onclick="division()"><br><br>
-    <label>Result: </label><input type="text" id="div" readonly><br><br>
+    <label class="math">Result: </label><input type="text" id="div" readonly><br><br>
 
-
+<!-- Multiplication code -->
     <p class="math">Multiplication Code</p>
-
     <input type="button" value="Multiplication" class="button" onclick="multiplication()"><br><br>
-    <label>Result: </label><input type="text" id="mul" readonly><br><br>
+    <label class="math">Result: </label><input type="text" id="mul" readonly><br><br>
 </body>
 </html>
