--- a/JAVA_SCRIPT/Day05_Assignment/index.html
+++ b/JAVA_SCRIPT/Day05_Assignment/index.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Largest_Number</title>
-    <script src="script.js"></script>
+
 </head>
 <body>
     <h1>WAP to display largest number among the three nummbers taken from the user..</h1>
 
-    <label>First number</label><input type="text" id="first">
-    <label>Second number</label><input type="text" id="second">
-    <label>Third number</label><input type="text" id="third">
+    <label>First number: </label><input type="text" id="first">
+    <label>Second number: </label><input type="text" id="second">
+    <label>Third number: </label><input type="text" id="third">
 
-    <input type="button" value="finding" onclick="finding">
+    <input type="button" value="Compare" onclick="finding()">
 
-    <label>Largest number</label><input type="text" id="largest">
+    <label>Largest number: </label><input type="text" id="largest" readonly>
 
     
 </body>
+<script src="script.js"></script>
 </html>
