--- a/PROJECTS/Game/index.html
+++ b/PROJECTS/Game/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game</title>
+    <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <input type="text" readonly id="field1">
+    <input type="button" value="Player 1" onclick="player1" id="button1">
+    <br>
+    <br>
+    <input type="text" readonly id="field2">
+    <input type="button" value="Player 2" onclick="player2" readonly id="button2">
+    <p>
+        <input type="text" id="result">
+    </p>
     
 </body>
 </html>
