multply code added

--- a/JAVA_SCRIPT/Day06_Loops/index.html
+++ b/JAVA_SCRIPT/Day06_Loops/index.html
@@ -6,7 +6,13 @@
     <title>Loops in JS</title>
 </head>
 <body>
+    <marquee behavior="slide" direction="left">
+        <p>WAP to display the multiple up to 20 of any user input number in num*1 = result</p>
+    </marquee>
+    <input type="text" id="field1">
 
+    <input type="button" value="Multiplication" onclick="Multiply()" readonly>
+    <p id="result"></p>
     
 </body>
 </html>
