multply code added

--- a/JAVA_SCRIPT/Day06_Loops/index.html
+++ b/JAVA_SCRIPT/Day06_Loops/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loops in JS</title>
+    <script src="script.js"></script>
 </head>
 <body>
+    <h1>Multiples Calculator</h1>
     <marquee behavior="slide" direction="left">
-        <p>WAP to display the multiple up to 20 of any user input number in num*1 = result</p>
+        <p id="p">WAP to display the multiple up to 20 of any user input number in num*1 = result</p>
     </marquee>
-    <input type="text" id="field1">
+    <input type="text" id="field">
 
-    <input type="button" value="Multiplication" onclick="Multiply()" readonly>
+    <input type="button" value="Mulplication" onclick="Multiple()"> 
     <p id="result"></p>
     
 </body>
