form validation code done

--- a/JAVA_SCRIPT/Day08_FormValidation/index.html
+++ b/JAVA_SCRIPT/Day08_FormValidation/index.html
@@ -11,7 +11,7 @@
     <input type="text" id="f1"><br><br>
 
     <label>Password :</label>
-    <input type="text" id="f2"><br><br>
+    <input type="password" id="f2"><br><br>
     
     <button onclick="Validation()">Login</button>
     
