--- a/HTML/Day8_Form/index.html
+++ b/HTML/Day8_Form/index.html
@@ -9,7 +9,7 @@
     <body bgcolor="aqua">
         <form>
             <label>Name: &nbsp&nbsp&nbsp&nbsp&nbsp</label><input type="text"><br><br>
-            <label>Password:&nbsp</label><input type="text"><br><br>
+            <label>Password:&nbsp</label><input type="password"><br><br>
             <label>Phone No:&nbsp</label><input type="number"><br><br>
             <label>Gender:</label>
                     <input type="radio" name="gender">
