phone  validation code done

--- a/JAVA_SCRIPT/Day10_Phone_Number_Validation/index.html
+++ b/JAVA_SCRIPT/Day10_Phone_Number_Validation/index.html
@@ -8,9 +8,11 @@
 <body>
     <h1>Phone_Number_Validation</h1>
     <p>User Name :<input type="text" id="user"></p>
-    <p>Phone Number :<input type="text" id="user"></p>
-    <button id="Validation" onclick="valid()"> Verify</button>
+    <p>Phone Number :<input type="text" id="phone"></p>
+    <button id="Validation" onclick="valid()">Verify</button>
 
     
 </body>
+<script src="script.js"></script>
+
 </html>
