added html course and all files modified

--- a/HTML/Day7_Table/index.html
+++ b/HTML/Day7_Table/index.html
@@ -26,16 +26,18 @@
         </table>
         <br>
         <br>
+
        <b> <u><p>Rowspan and Coloumnspan example:</p></u></b>
 
         <table border="1" >
             <tr>
                 <td rowspan="2">S.N</td>
-                <td colspan="2" style="text-align:right;">Subject</td>
+                <td colspan="3" style="text-align:center;">Subject</td>
             </tr>
             <tr>
                 <td>theory</td>
                 <td>pratical</td>
+                <td>remarks</td>
             </tr>
 
         </table>
