--- a/JAVA_SCRIPT/Day11_RegExp/index.html
+++ b/JAVA_SCRIPT/Day11_RegExp/index.html
@@ -6,6 +6,9 @@
     <title>Regular Expression</title>
 </head>
 <body>
-    
+    <label>Username : <input type="text" id="username"></label>
+    <label>Password : <input type="text" id="password"></label>
+    <button onclick="submit()">Submit</button>
+    <script src="script.js"></script>
 </body>
 </html>
