--- a/JAVA_SCRIPT/Day12_Object/index.html
+++ b/JAVA_SCRIPT/Day12_Object/index.html
@@ -6,8 +6,7 @@
     <title>Object</title>
 </head>
 <body>
-    <!-- <script src="script.js"></script> -->
-    <script src="assignmnet.js"></script>
+    <script src="script.js"></script>
 
 </body>
 </html>
