--- a/Protfolio/index.html
+++ b/Protfolio/index.html
@@ -52,13 +52,9 @@
 
       <p class="white">Hello, my name is <span style=" font-family: Brush Script MT;" class="red">Anjan Shrestha.</span>
       </p>
-      <p class="white"> I am a <span class="red">graphic Designer.</span><br>
-        I am a passionate a graphic designer.....</p>
+      <p class="red"> I am a <span class="red">graphic Designer. I am a passionate a graphic designer.....</span><br>
+        </p>
         
-
-
-
-
     </div>
 </body>
 
