--- a/First_Website/index.html
+++ b/First_Website/index.html
@@ -8,6 +8,19 @@
 </head>
 <body>
     <!-- Header Section Start -->
+    <header>
+        <a href="#" class="logo">c<i class="fas fa-virus"></i>ovid-19</a>
+        <nav class="navbar">
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#protect">Protect</a></li>
+                <li><a href="#symptoms">Symptoms</a></li>
+                <li><a href="#prevent">Prevent</a></li>
+                <li><a href="#handwash">HandWash</a></li>
+                <li><a href="#spread">Spread</a></li>
+            </ul>
+        </nav>
+    </header>
     <!-- Header Section End -->
 
 
@@ -38,6 +51,6 @@
 
 
 
-    <script src="scripy.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
