--- a/First_Website/index.html
+++ b/First_Website/index.html
@@ -13,11 +13,11 @@
         <nav class="navbar">
             <ul>
                 <li><a href="#home">Home</a></li>
-                <li><a href="#protect">Protect</a></li>
-                <li><a href="#symptoms">Symptoms</a></li>
-                <li><a href="#prevent">Prevent</a></li>
-                <li><a href="#handwash">HandWash</a></li>
-                <li><a href="#spread">Spread</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#home">Home</a></li>
             </ul>
         </nav>
     </header>
