--- a/First_Website/index.html
+++ b/First_Website/index.html
@@ -13,11 +13,11 @@
         <nav class="navbar">
             <ul>
                 <li><a href="#home">Home</a></li>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#home">Home</a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
             </ul>
         </nav>
     </header>
