--- a/First_Website/index.html
+++ b/First_Website/index.html
@@ -15,7 +15,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#protect">Protect</a></li>
                 <li><a href="#symptoms">Symptoms</a></li>
-                <li><a href="#"></a></li>
+                <li><a href="#prevent">Prevent</a></li>
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
             </ul>
