--- a/First_Website/index.html
+++ b/First_Website/index.html
@@ -16,8 +16,8 @@
                 <li><a href="#protect">Protect</a></li>
                 <li><a href="#symptoms">Symptoms</a></li>
                 <li><a href="#prevent">Prevent</a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
+                <li><a href="#handwash">Handwash</a></li>
+                <li><a href="#spread">Spread</a></li>
             </ul>
         </nav>
     </header>
