--- a/First_Website/index.html
+++ b/First_Website/index.html
@@ -12,7 +12,7 @@
         <a href="#" class="logo">c<i class="fas fa-virus"></i>ovid-19</a>
         <nav class="navbar">
             <ul>
-                
+                <li><a href="#home">Home</a></li>
                 <li><a href="#protect">Protect</a></li>
                 <li><a href="#symptoms">Symptoms</a></li>
                 <li><a href="#prevent">Prevent</a></li>
